$Id: History,v 1.55 2002-12-06 12:16:43 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Dec 6, 2002, J.Allison (tracking-V04-01-12)
- Fixed unprotected pointer in G4SmoothTrajectoryPoint::CreateAttValues.

Dec 4, 2002, T.Sasaki (tracking-V04-01-11)
- static Get/SetInstnce methods has moved to .cc from .hh.

Nov 18, 2002, M.Asai (tracking-V04-01-10)
- Tagged.

Nov 11, 2002, J.Allison
- Restored G4SmoothTrajectory::DrawTrajectory.

Nov 8, 2002, M.Asai (tracking-V04-01-09)
- Tagged for Geant4 5.0 release

Nov 8, 2002 J.Generowicz
- Bodies introduced into SmoothTrajectory(Point) classes 

Nov 8, 2002, J.Allison
- Implemented default Show/DrawTrajectory in G4VTrajectory.
- Augmented GetAttDefs and CreateAttValues in G4(Smooth)Trajectory(Point).

Nov 07, 2002, T,Sasaki (tracking-V04-01-07, tracking-V04-01-08)
- Fix for the problem with optical processes
Nov 05, 2002, T,Sasaki (tracking-V04-01-06)
- clean up G4SteppingManager.hh and G4VSterppinVerbose.cc

Nov 05, 2002, M.Asai (tracking-V04-01-05)
- tagged.

Nov 05, 2002, J.Generowicz
- Renamed aTrajectory(Point)Allocator to aSmoothTrajectory(Point)Allocator
  in the SmoothTrajectory(Point) classes.

Nov 01, 2002, M.Asai (tracking-V04-01-04)