@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4VTrajectory.cc,v 1.1 2002-11-08 18:17:05 johna Exp $
+// $Id: G4VTrajectory.cc,v 1.2 2002-12-11 15:45:03 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -133,15 +133,19 @@ void G4VTrajectory::ShowTrajectory(G4std::ostream& os) const
 
 void G4VTrajectory::DrawTrajectory(G4int i_mode) const
 {
-  // Draws a trajectory as a polyline (red for positive, blue for
-  // negative, green for neutral) and, if i_mode>0, adds markers -
-  // yellow circles for step points and magenta squares for auxiliary
-  // points, if any - whose screen size in pixels is given by i_mode/10.
+  // If i_mode>=0, draws a trajectory as a polyline (blue for
+  // positive, red for negative, green for neutral) and, if i_mode!=0,
+  // adds markers - yellow circles for step points and magenta squares
+  // for auxiliary points, if any - whose screen size in pixels is
+  // given by abs(i_mode)/1000.  E.g: i_mode = 5000 gives easily
+  // visible markers.
 
   G4VVisManager* pVVisManager = G4VVisManager::GetConcreteInstance();
   if (!pVVisManager) return;
 
-  const G4double markerSize = i_mode/10;
+  const G4double markerSize = G4std::abs(i_mode)/1000;
+  G4bool lineRequired (i_mode >= 0);
+  G4bool markersRequired (markerSize > 0.);
 
   G4Polyline trajectoryLine;
   G4Polymarker stepPoints;
@@ -154,29 +158,34 @@ void G4VTrajectory::DrawTrajectory(G4int i_mode) const
     if (auxiliaries) {
       for (size_t iAux = 0; iAux < auxiliaries->size(); ++iAux) {
 	const G4ThreeVector pos((*auxiliaries)[iAux]);
-	trajectoryLine.push_back(pos);
-	if (i_mode >= 0) {
+	if (lineRequired) {
+	  trajectoryLine.push_back(pos);
+	}
+	if (markersRequired) {
 	  auxiliaryPoints.push_back(pos);
 	}
       }
     }
     const G4ThreeVector pos(aTrajectoryPoint->GetPosition());
-    trajectoryLine.push_back(pos);
-    if (i_mode >= 0) {
+    if (lineRequired) {
+      trajectoryLine.push_back(pos);
+    }
+    if (markersRequired) {
       stepPoints.push_back(pos);
     }
   }
 
-  G4Colour colour;
-  const G4double charge = GetCharge();
-  if(charge>0.)      colour = G4Colour(1.,0.,0.); // Red = positive.
-  else if(charge<0.) colour = G4Colour(0.,0.,1.); // Blue = negative.
-  else               colour = G4Colour(0.,1.,0.); // Green = neutral.
-  G4VisAttributes trajectoryLineAttribs(colour);
-  trajectoryLine.SetVisAttributes(&trajectoryLineAttribs);
-  pVVisManager->Draw(trajectoryLine);
-
-  if (i_mode >= 0) {
+  if (lineRequired) {
+    G4Colour colour;
+    const G4double charge = GetCharge();
+    if(charge>0.)      colour = G4Colour(0.,0.,1.); // Blue = positive.
+    else if(charge<0.) colour = G4Colour(1.,0.,0.); // Red = negative.
+    else               colour = G4Colour(0.,1.,0.); // Green = neutral.
+    G4VisAttributes trajectoryLineAttribs(colour);
+    trajectoryLine.SetVisAttributes(&trajectoryLineAttribs);
+    pVVisManager->Draw(trajectoryLine);
+  }
+  if (markersRequired) {
     auxiliaryPoints.SetMarkerType(G4Polymarker::squares);
     auxiliaryPoints.SetScreenSize(markerSize);
     auxiliaryPoints.SetFillStyle(G4VMarker::filled);
