@@ -1,4 +1,4 @@
-$Id: History,v 1.55 2002-12-06 12:16:43 johna Exp $
+$Id: History,v 1.56 2002-12-11 15:44:51 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Dec 6, 2002, J.Allison (tracking-V04-01-13)
+- Last minute fix to G4VTrajectory::DrawTrajectory.
 
 Dec 6, 2002, J.Allison (tracking-V04-01-12)
 - Fixed unprotected pointer in G4SmoothTrajectoryPoint::CreateAttValues.
